docs: document cloud deployment, microservices networking, and UX production lessons in ARCHITECTURE_DECISIONS_AND_SOLUTIONS.md